* core: #2652 fixed: StatusMenu correctly updated after account is disconnected (Juzef)
* sms: #2662 fixed: updated check of successful response after sending SMS to Orange network (Juzef)
* core: #2607 fixed: search bar in chat messages list gets highlighted if the phrase was not found (Juzef)
* jabber: #2651, #2573 fixed: avoid trying to download avatars after account is disconnected (Juzef)

+++ version 0.12.3
* jabber: fixed Facebook contacts groups being lost when upgrading from 0.10.x/0.11.x (beevvy)
* build: dropped USE_X11_XFIXES CMake option which had been broken for a long time (beevvy)
* gui: worked around critical bug in Qt 4.8.3 (beevvy)

+++ version 0.12.2
* core: fixed every new profile of Kadu being lost on Windows (regression since 0.11.x) (beevvy)
* qt: ship more stable version of Qt on Windows (beevvy)
* icons: removed lots of unused status icons (beevvy)
* icons: fixed xmpp status icons in freedesktop notifications on GTK+-based platforms (beevvy)
* sql_history: fixed chat history with anonymous contacts not being displayed (beevvy)
* sms: fixed saving sent SMS'es in history (beevvy)
* spellchecker: fixed possible crash in configuration window (beevvy)
* translations: updated Polish and Czech translations, added French translation

+++ version 0.12.1
* jabber: reconnect after waking up from suspend (Juzef)
* chat styles: #2601 fixed: fix old styles when AllowExecutingFromParser option is enabled (Mikołaj Milej, beevvy)
* tabs: do not automatically activate chat widget when receiving new messages (beevvy)
* gui: display 32x32 avatars on buddy list instead of 31x31 (beevvy)
* parser: #2612 fixed: restored DATA_PATH, HOME, KADU_CONFIG Parser variables (beevvy)
* gadu: #2620 fixed: restored downloading big avatars (beevvy)
* build: migrated to GNUInstallDirs CMake module which should fix installation paths on Debian multiarch (beevvy)
* qt4_docking: #2627 fixed: fixed context menu in bottom panel in Ubuntu 12.04 GNOME Classic session (beevvy)